<project>
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.teletha</groupId>
	<artifactId>javadng</artifactId>
	<version>1.7.0</version>
	<packaging>jar</packaging>
	<name>javadng</name>
	<description/>
	<dependencies>
		<dependency>
			<groupId>com.github.teletha</groupId>
			<artifactId>antibug</artifactId>
			<version>[1.2.0,)</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>org.commonmark</groupId>
			<artifactId>commonmark</artifactId>
			<version>[0.18.0,)</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.github.teletha</groupId>
			<artifactId>icymanipulator</artifactId>
			<version>[1.4.0,)</version>
			<scope>provided</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.github.javaparser</groupId>
			<artifactId>javaparser-core</artifactId>
			<version>[3.23.1,)</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.github.teletha</groupId>
			<artifactId>psychopath</artifactId>
			<version>[1.3.0,)</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.github.teletha</groupId>
			<artifactId>sinobu</artifactId>
			<version>[2.8.0,)</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.github.teletha</groupId>
			<artifactId>stylist</artifactId>
			<version>[1.3.1,)</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.github.teletha</groupId>
			<artifactId>viewtify</artifactId>
			<version>[2.0.0,)</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
	</dependencies>
	<licenses>
		<license>
			<name>The MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
		</license>
	</licenses>
	<repositories>
		<repository>
			<id>Maven</id>
			<name>repo1.maven.org</name>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>JitPack</id>
			<name>jitpack.io</name>
			<url>https://jitpack.io/</url>
		</repository>
	</repositories>
	<url>https://github.com/teletha/javadng</url>
	<scm>
		<url>https://github.com/teletha/javadng</url>
		<connection>scm:git:https://github.com/teletha/javadng.git</connection>
		<developerConnection>scm:git:https://github.com/teletha/javadng.git</developerConnection>
	</scm>
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/teletha/javadng/issues</url>
	</issueManagement>
	<developers/>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<release>16</release>
					<compilerArgs/>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
			</plugin>
		</plugins>
	</build>
</project>